--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -3,7 +3,7 @@
 [[Image:Hoary marmot.jpg|thumb|''Marmota caligata'']]
 
 ===Etymology===
-From {{etyl|frm|en}} ''marmote'', from {{etyl|fro|en}} ''marmotaine, marmontaine, murmontain'', from Old [[Franco-Provençal]] ''marmotan'', {{etyl|VL.|en}} ''mures montani'', from {{etyl|la|en}} {{term|mus monti|lang=la}} 'mountain rat', from [[Classical Latin]] {{term|mus alpini}}; akin to {{etyl|rm|-}} (Engadine) {{term|murmont}}, {{etyl|goh|-}} {{term|muremunto|lang=goh}}, {{etyl|de|-}} dialectal {{term|Murmentel}}, standard {{term|Murmeltier}}.
+From {{etyl|frm|en}} ''marmote'', from {{etyl|fro|en}} ''marmotaine, marmontaine, murmontain'', from Old [[Franco-Provençal]] ''marmotan'', {{etyl|VL.|en}} ''mures montani'', from {{etyl|la|en}} {{term|mus monti|lang=la}} 'mountain rat', from [[Classical Latin]] {{m|la|mus alpini}}; akin to {{etyl|rm|-}} (Engadine) {{m|rm|murmont}}, {{etyl|goh|-}} {{term|muremunto|lang=goh}}, {{etyl|de|-}} dialectal {{m|de|Murmentel}}, standard {{m|de|Murmeltier}}.
 
 ===Pronunciation===
 * {{IPA|/ˈmɑrmət/|lang=en}}
