--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -33,8 +33,8 @@ From {{etyl|la|en}} {{term|lang=la|quadrilaterus}}, [[quadri-]] (four) + [[latus
 * Hindi: {{t|hi|चतुर्भुज}}
 * Hungarian: {{t+|hu|négyszög}}
 * Icelandic: {{t|is|ferhliðungur|m}}, {{t|is|fjórhliðungur|m}}
-* Italian: {{t+|it|quadrilatero|m}}, {{t+|it|quadrangolo|m}}
 {{trans-mid}}
+* Italian: {{t+|it|quadrilatero|m}}, {{t+|it|quadrangolo|m}}
 * Japanese: {{t|ja|四辺形|tr=しへんけい, shihenkei|sc=Jpan}}, {{t|ja|四角形|tr=しかっけい, shikakkei|sc=Jpan}}
 * Malay: {{t|ms|segi empat}}, {{t|ms|caturkona}}, {{t|ms|tetragon}}
 * Maori: {{t|mi|tapawhā}}
@@ -48,6 +48,7 @@ From {{etyl|la|en}} {{term|lang=la|quadrilaterus}}, [[quadri-]] (four) + [[latus
 * Russian: {{t+|ru|четырёхуго́льник|m|tr=četyrjoxugólʹnik}}
 * Spanish: {{t+|es|cuadrilátero|m}}
 * Swedish: {{t+|sv|fyrhörning|c}}
+* Tagalog: {{t|tl|patsiha}}
 * Telugu: {{t+|te|చతుర్భుజి|tr=chaturbhuji}}
 {{trans-bottom}}
 
