--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -23,7 +23,7 @@ From {{etyl|la|en}} {{m|la|minimum}}, neuter form of {{term|minimus||lang=la|lea
 # {{context|statistics|lang=en}} The smallest member of a [[batch]] or [[sample]] or the lower bound of a [[probability distribution]].
 
 ====Usage notes====
-* {{term|minima|Minima}} is more common plural for the technical senses.
+* {{m|en|minima|Minima}} is more common plural for the technical senses.
 
 ====Antonyms====
 * [[maximum]]
