--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -171,6 +171,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Lithuanian: {{t+|lt|pūsti}}
 * Macedonian: {{t|mk|дува}}
 * Malay: {{t|ms|tiup}}, {{t|ms|hembus}}
+* Maori: {{t|mi|ihi}}
 * North Frisian: {{qualifier|Föhr-Amrum}} {{t|frr|blä}}
 * Old Frisian: {{t|ofs|blā}}
 * Polish: {{t+|pl|dmuchać}}, {{t+|pl|dąć}}, {{t+|pl|wiać}}
