--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -77,8 +77,8 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 * Latin: {{t|la|lutra|f}}
 * Latvian: {{t|lv|ūdrs|m}}
 * Lithuanian: {{t+|lt|ūdra|f}}
-{{trans-mid}}
 * Lun Bawang: {{t|lnd|dengen}}
+{{trans-mid}}
 * Macedonian: {{t|mk|видра|f}}
 * Malay:
 *: Rumi: {{t|ms|anjing air}}, {{t|ms|berang-berang}}
@@ -116,6 +116,7 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 * Spanish: {{t+|es|nutria|f}}, {{t|es|lutria|f}}
 * Swedish: {{t+|sv|utter|c}}
 * Tagal Murut: {{t|mvv|tilung}}
+* Tagalog: {{t|tl|nutriya}}
 * Telugu: {{t+|te|ఉద్రము}}
 * Turkish: {{t+|tr|susamuru}}, {{t+|tr|lutr}}
 * Ukrainian: {{t|uk|ви́дра|f}}
