--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -116,7 +116,7 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 * Spanish: {{t+|es|nutria|f}}, {{t|es|lutria|f}}
 * Swedish: {{t+|sv|utter|c}}
 * Tagal Murut: {{t|mvv|tilung}}
-* Tagalog: {{t|tl|nutriya}}
+* Tagalog: {{t|tl|dungon}}
 * Telugu: {{t+|te|ఉద్రము}}
 * Turkish: {{t+|tr|susamuru}}, {{t+|tr|lutr}}
 * Ukrainian: {{t|uk|ви́дра|f}}
