--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -80,6 +80,7 @@ The verb comes from the supposed cunningness of the weasel.
 *: Lower Sorbian: {{t|dsb|łasyca|f}}, {{t|dsb|łasycka|f}}
 *: Upper Sorbian: {{t|dsb|kohlica|f}}
 * Spanish: {{t+|es|comadreja|f}}, {{t|es|mustela|f}}, {{t|es|turón|m}}
+* Tagalog: {{t|tl|mustela}}
 * Turkish: {{t+|tr|gelincik}}
 * Ukrainian: {{t|uk|ласка|f|tr=láska|sc=Cyrl}}
 * Volapük: {{qualifier|♂♀}} {{t|vo|visaf}}
