--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -55,7 +55,7 @@ From {{etyl|la|en}} {{m|la|minimum}}, neuter form of {{term|minimus||lang=la|lea
 * Finnish: {{t+|fi|minimi}}
 * French: {{t+|fr|minimum|m}}
 * German: {{t+|de|Minimum|n}}
-* Greek: {{t|el|ελάχιστο όριο|n}}
+* Greek: {{t|el|ελάχιστο όριο|n}}, {{t|el|κατώτατο όριο|n}}
 * Hebrew: {{t|he|מִינִימוּם|m|tr=minimum}}, {{t|he|מִזְעָר|m|tr=miz'ár}}, {{t|he|מִצְעָר|m|tr=mitz'ár}}
 * Icelandic: {{t|is|lágmark|n}}
 * Italian: {{t+|it|minimo|m}}
