--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -132,12 +132,13 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{term|stæf|lang=ang}
 * Georgian: {{t+|ka|შტატი}}, {{t|ka|პერსონალი}}
 * German: {{t+|de|Belegschaft|f}}, {{t+|de|Personal|n}}, {{t+|de|Stab|m}}
 * Greek: {{t+|el|προσωπικό|n}}, {{t+|el|επιτελείο|n}}
+* Hungarian: {{t+|hu|személyzet}}
 * Irish: {{t+|ga|foireann|f}}
 * Italian: {{t+|it|personale|m}}, {{t+|it|organico|m}}
 * Japanese: {{t+|ja|人員|tr=じんいん, jin'in|sc=Jpan}}, {{t+|ja|スタッフ|tr=sutaffu|sc=Jpan}}
-{{trans-mid}}
 * Lao: {{t|lo|ພະນັກງານ|sc=Laoo}}
 * Macedonian: {{t|mk|персонал|m|tr=personál}}, {{t|mk|кадар|m|tr=kádar}}
+{{trans-mid}}
 * Malay: {{t|ms|kakitangan}}
 * Norwegian: {{t|no|personale}}
 * Persian: {{t+|fa|پرسنل|tr=personel|sc=fa-Arab}}, {{t+|fa|کادر|tr=kâdr|sc=fa-Arab}}
