--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -99,6 +99,7 @@ From {{etyl|enm|en}} {{m|enm|bageard||marked by a badge}}, from {{m|enm|bage||ba
 * Navajo: {{t|nv|nahashchʼidí}}
 * Norwegian: {{t+|no|grevling|m}}
 * Occitan: {{t+|oc|tais|m}}, {{t+|oc|rabàs|m}}
+* Old English: {{t|ang|brocc}}
 * Old Irish: {{t|sga|brocc|m}}
 * Persian: {{t+|fa|گورکن|tr=gurkan|sc=fa-Arab}}
 * Polish: {{t+|pl|borsuk|m}}, {{t+|pl|jaźwiec|m}}
