--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -83,6 +83,7 @@ From {{etyl|enm|en}} {{m|enm|binden}}, from {{etyl|ang|en}} {{m|en|bindan}}, fro
 * Icelandic: {{t+|is|binda}}
 * Low German:
 *: German Low German: {{t+|nds-de|binnen}}
+* Maori: {{t|mi|rona}}
 * Middle Dutch: {{t|dum|binden}}
 * Middle English: {{t|enm|binden}}
 * Middle Low German: {{t|gml|binden}}
