--- a/en/t/talk down.775561.wikitext
+++ b/en/t/talk down.775561.wikitext
@@ -5,31 +5,12 @@
 
 # {{context|idiomatic|lang=en}} To [[negotiate]] a [[lower]] price.
 #: ''If he offers a very high price, see if you can '''talk''' him '''down''' before you agree to anything.
-# {{rfd-sense}} {{context|flying|lang=en}} To tell an airplane passenger (who has had no flight training) step by step by two-way radio how to land the plane, e.g. if its pilot has become incapacitated while flying.
-#*{{quote-magazine|year=1960
-|month=Feb
-|title=Business with FAA
-|page=109
-|magazine=Flying Magazine
-|passage=GET TALKED DOWN: When a pilot gets caught in weather, he may call the nearest tower for Ground Controlled Approach landing assistance, wherever the airport has GCA radar.
-}}
-#*{{quote-book|year=2000|author=Larry King
-|title=Anything Goes!: What I've Learned from Pundits, Politicians, and Presidents
-|isbn=0759520356
-|page=139
-|passage=He got out, looked at me, and said, “I feel like Doris Day in Julie when she was '''talked down''' by air traffic control and landed the airplane.”[.]
-}}
-#*{{quote-book|year=2008|author=Winston Fletcher
-|title=Powers of Persuasion: The Inside Story of British Advertising 1951-2000
-|isbn=0191647594
-|passage=Its Spielberg-inspired first commercial, in which Manhattan Island floated loftily through the sky and was '''talked down''' by air traffic control at Heathrow[.]
-}}
-#*{{quote-book|year=2008|author=Nelson DeMille and Thomas Block
-|title=Mayday
-|isbn=0748109455
-|passage=In other words, if you '''talk''' him '''down''' and he crashes, you're worse off than if you hadn't tried.
-}}
-#: ''The Cessna's pilot had a heart attack while flying, and his non-flying passenger had to be talked down by Air Traffic Control.''
+# {{rfd-sense}} {{context|flying|lang=en}} (Of ground control) to verbally assist someone to land an aircraft.
+#*{{quote-magazine|year=1960|month=Feb|title=Business with FAA|page=109|magazine=Flying Magazine|passage=GET TALKED DOWN: When a pilot gets caught in weather, he may call the nearest tower for Ground Controlled Approach landing assistance, wherever the airport has GCA radar.}}
+#*{{quote-book|year=2000|author=Larry King|title=Anything Goes!: What I've Learned from Pundits, Politicians, and Presidents|isbn=0759520356|page=139|passage=He got out, looked at me, and said, “I feel like Doris Day in Julie when she was '''talked down''' by air traffic control and landed the airplane.”[.]}}
+#*{{quote-book|year=2008|author=Winston Fletcher|title=Powers of Persuasion: The Inside Story of British Advertising 1951-2000|isbn=0191647594|passage=Its Spielberg-inspired first commercial, in which Manhattan Island floated loftily through the sky and was '''talked down''' by air traffic control at Heathrow[.]}}
+#*{{quote-book|year=2008|author=Nelson DeMille and Thomas Block|title=Mayday|isbn=0748109455|passage=In other words, if you '''talk''' him '''down''' and he crashes, you're worse off than if you hadn't tried.}}
+#: ''The pilot had a heart attack while flying and a passenger had to be talked down by Air Traffic Control.''
 # {{context|transitive|lang=en}} To convince a person to cease a drastic action or response, such as a suicide attempt or act of rage.
 #* 2007, [https://books.google.com/books?id=KmR6dmWMWeMC&pg=PT77&dq=talked+him+down&hl=en&sa=X&ei=cg2eVfTYDIzy-AGBvZC4BQ&ved=0CDsQ6AEwBQ ''Deep Storm''] by Lincoln Child
 #*: '''Talk him down''', the rule book went. Calm him, get him secured. Easier said than done. Crane had '''talked down''' a would-be jumper standing on a support cable of the George Washington Bridge.
