--- a/en/o/Oaxaca.775466.wikitext
+++ b/en/o/Oaxaca.775466.wikitext
@@ -41,7 +41,7 @@
 ===Proper noun===
 {{es-proper noun|f}}
 
-# A state of [[Mexico]].
+# {{place|es|state|c/Mexico}}
 
 ====Synonyms====
 * {{l|es|OA}} {{qualifier|abbreviation}}
@@ -51,8 +51,6 @@
 
 ===See also===
 * {{pedialite|lang=es}}
-
-[[Category:es:States of Mexico]]
 
 [[es:Oaxaca]]
 [[fr:Oaxaca]]
