--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -58,6 +58,7 @@ From {{etyl|la|en}} {{m|la|minimum}}, neuter form of {{term|minimus||lang=la|lea
 * Greek: {{t|el|ελάχιστο όριο|n}}, {{t|el|κατώτατο όριο|n}}
 * Hebrew: {{t|he|מִינִימוּם|m|tr=minimum}}, {{t|he|מִזְעָר|m|tr=miz'ár}}, {{t|he|מִצְעָר|m|tr=mitz'ár}}
 * Icelandic: {{t|is|lágmark|n}}
+* Ido: {{t+|io|minimo}}
 * Italian: {{t+|it|minimo|m}}
 * Japanese: {{t+|ja|最小|tr=さいしょう, saishō|sc=Jpan}}, {{t+|ja|最低|tr=さいてい, saitei|sc=Jpan}}, {{t|ja|極小|tr=きょくしょう, kyokushō|sc=Jpan}}
 {{trans-mid}}
