--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -1,6 +1,7 @@
 ==English==
 
 ===Etymology===
+{{PIE root|en|bʰreg}}
 From {{etyl|enm|en}} {{term|fraccioun||a breaking|lang=enm}}, from {{etyl|xno|en}}, from {{etyl|fro|en}}, from {{etyl|ML|en}} {{term|fractio||a fragment, portion|lang=la}}, from earlier {{etyl|la|en}} {{term|fractio||a breaking, a breaking into pieces|lang=la}}, from {{term|fractus|lang=la}} (English {{term|fracture|lang=en}}), past participle of {{term|frangere||to break|lang=la}} (whence English {{term|frangible|lang=en}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰreg-}} (English {{term|break|lang=en}}).
 
 ===Pronunciation===
