--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -34,6 +34,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * German: {{t|de|Nintendo|f}}
 {{trans-mid}}
 * Japanese: {{t|ja|任天堂|tr=Nintendō}}, {{t|ja|ニンテンドー|tr=Nintendō}}, {{t+|ja|ファミコン|tr=famikon}}
+* Nepali: {{t|ne|निन्टेन्डो|sc=Deva}}
 * Russian: {{t|ru|Нинте́ндо}}
 * Spanish: {{t|es|Nintendo}}
 * Thai: {{t|th|นินเทนโด|tr=Ninthendo}}
