--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -27,6 +27,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 
 ====Translations====
 {{trans-top|Nintendo Entertainment System, or other video game system made by Nintendo}}
+* Arabic: {{t|ar|نينتندو}}
 * Bengali: {{t|bn|নিনটেনডো|sc=Beng}}
 * Chinese:
 *: Mandarin: {{t+|cmn|任天堂|tr=Rèntiāntáng|sc=Hani}}
