--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -39,7 +39,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Japanese: {{t|ja|任天堂|tr=Nintendō}}, {{t|ja|ニンテンドー|tr=Nintendō}}, {{t+|ja|ファミコン|tr=famikon}}
 * Nepali: {{t|ne|निन्टेन्डो|sc=Deva}}
 * Persian: {{t+|fa|نینتندو|sc=fa-Arab}}
-* Russian: {{t|ru|Нинте́ндо}}
+* Russian: {{t|ru|Нинте́ндо}}, {{t|ru|Нинтендо|sc=Cyrl}}
 * Spanish: {{t|es|Nintendo}}
 * Thai: {{t|th|นินเทนโด|tr=Ninthendo}}
 {{trans-bottom}}
