--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -36,6 +36,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * German: {{t|de|Nintendo|f}}
 {{trans-mid}}
 * Hebrew: {{t|he|נינטנדו}}
+* Italian: {{t|it|Nintendo}}, {{t|it|Nintendo|f}}
 * Japanese: {{t|ja|任天堂|tr=Nintendō}}, {{t|ja|ニンテンドー|tr=Nintendō}}, {{t+|ja|ファミコン|tr=famikon}}
 * Nepali: {{t|ne|निन्टेन्डो|sc=Deva}}
 * Persian: {{t+|fa|نینتندو|sc=fa-Arab}}
