--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -19,6 +19,7 @@ From {{etyl|la|en}} {{m|la|enumerātus}} < {{m|la|enumerō}}.
 * Greek: {{t+|el|απαριθμώ}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|felsorol}}
+* Polish: {{t+|pl|policzyć|pf}}
 * Portuguese: {{t+|pt|enumerar}}
 * Russian: {{t+|ru|перечисля́ть|impf|sc=Cyrl}}, {{t+|ru|перечи́слить|pf|sc=Cyrl}}
 * Serbo-Croatian:
@@ -30,6 +31,7 @@ From {{etyl|la|en}} {{m|la|enumerātus}} < {{m|la|enumerō}}.
 * French: {{t+|fr|dénombrer}}
 * Hungarian: {{t+|hu|megszámol}}, {{t+|hu|számlál}}
 {{trans-mid}}
+* Polish: {{t|pl|odliczyć|pf}}, {{t|pl|odliczać|impf}}
 * Portuguese: {{t+|pt|enumerar}}
 * Russian: {{t+|ru|пересчи́тывать|impf|sc=Cyrl}}, {{t+|ru|пересчита́ть|pf|sc=Cyrl}}
 {{trans-bottom}}
