--- a/en/n/nove.26046.wikitext
+++ b/en/n/nove.26046.wikitext
@@ -56,7 +56,7 @@ From {{etyl|la|gl}} {{m|la|novem}}.
 ==Italian==
 {{cardinalbox|it|8|9|10|otto|dieci|ord=nono|mult=nonuplo|frac=nono}}
 ===Etymology===
-From {{etyl|la|it}} {{m|la|novem}}, ultimately from {{etyl|ine-pro|it}} {{m|ine-pro|*h₁néwn̥}}.
+From {{inh|it|la|novem}}, ultimately from {{inh|it|ine-pro|*h₁néwn̥}}.
 
 ===Pronunciation===
 * {{IPA|lang=it|/ˈnɔve/|[ˈn̺ɔː.ve]}}
