--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -4,6 +4,10 @@
 ===Etymology===
 From {{etyl|la|en}} {{m|la|quadrilaterus}}, ''[[quadri-]]'' (four) + {{m|la|latus}} (sided)
 
+===Pronunciation===
+* {{IPA|/ˌkwɒd rəˈlæt ər əl/|lang=en}}
+* {{audio|en-us-quadrilateral.ogg|Audio (US)|lang=en}}
+
 ===Noun===
 {{wikipedia}}
 {{en-noun}}
