--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -27,7 +27,7 @@
 * Latin: {{t|la|dediticius|m}}
 * Navajo: {{t|nv|yisnááh}}
 * Norwegian: {{t|no|krigsfange|m}}
-* Persian: {{t+|fa|اسیر|tr=asir|sc=fa-Arab}}, {{t+|fa|بندی|tr=bandi|sc=fa-Arab}}
+* Persian: {{t+|fa|اسیر|tr=asir|sc=fa-Arab}}
 * Polish: {{t|pl|jeniec wojenny|m-pr}}
 * Portuguese: {{t|pt|prisioneiro de guerra|m}}
 * Russian: {{t+|ru|военнопле́нный|m}}, {{t+|ru|пле́нный|m}}
