--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -24,8 +24,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare Middle Dutch {{m|d
 #* '''1749''', Henry Fielding, ''Tom Jones'', Folio Society 1979, p. 15:
 #*: For no woman, sure, will plead the passion of love for an excuse. This would be to own herself the mere tool and '''bubble''' of the man.
 # {{label|en|figurative}} The emotional and/or physical atmosphere in which the subject is immersed; circumstances, ambience.
-#* {{quote-news|year=2012
-|date=June 3
+#* {{quote-news|date=June 3, 2012
 |author=Nathan Rabin
 |title=TV: Review: THE SIMPSONS (CLASSIC): “Mr. Plow” (season 4, episode 9; originally aired 11/19/1992)
 |url=http://www.avclub.com/articles/mr-plow,75560/
