--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -30,8 +30,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare Middle Dutch {{m|d
 |url=http://www.avclub.com/articles/mr-plow,75560/
 |page=
 |passage=He’s wrapped up snugly in a cozy '''bubble''' of self-regard, talking for his own sake more than anyone else’s.}}
-#* {{quote-news|year=2011
-|date=January 23
+#* {{quote-news|date=January 23, 2011
 |author=Alistair Magowan
 |title=Blackburn 2 - 0 West Brom
 |work=BBC
