--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -84,6 +84,7 @@ From {{etyl|enm|en}} {{m|enm|bleden}}, from {{etyl|ang|en}} {{m|ang|blēdan||to 
 * Latvian: {{t+|lv|asiņot}}
 * Lithuanian: {{t+|lt|kraujuoti}}
 * Mongolian: {{t|mn|хуудас дүүрэн зураг|sc=Cyrl}}
+* North Frisian: {{t|frr|bled}}
 * Occitan: {{t+|oc|sagnar}}
 * Old French: {{t|fro|saingnier}}
 * Old Norse: {{t|non|blǿða}}, {{t|non|blœða}}
