--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -189,7 +189,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Nepali: {{t|ne|द्वीप|m|tr=dvīpa|sc=Deva}}, {{t|ne|टापू|tr=ṭāpū|sc=Deva}}
 * Ngazidja Comorian: {{t|zdj|siwa|c5|c6}}
 * Niuean: {{t|niu|motu}}
-* Norman: {{t|nrf|île}}
+* Norman: {{t|nrf|île|f}}
 * North Frisian:
 *: Föhr-Amrum: {{t|frr|eilun|n}}
 *: Helgoland: {{t|frr|Ailun|n}}, {{t|frr|Eelun|n}}
