--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -76,6 +76,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Bulgarian: {{t+|bg|о́стров|m}}
 * Burmese: {{t+|my|ကျွန်း}}
 * Catalan: {{t+|ca|illa|f}}
+* Cebuano: {{t|ceb|pulo}}
 * Central Melanau: {{t|mel|pulau}}
 * Chamicuro: {{t|ccc|yishla}}
 * Chechen: {{t|ce|гӏайре}}
@@ -115,6 +116,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Georgian: {{t|ka|კუნძული}}
 * German: {{t+|de|Insel|f}}, {{qualifier|poetic}} {{t+|de|Eiland|n}}
 *: Alemannic German: {{t|gsw|Insle|f}}
+*: Bavarian: {{t|bar|Insl|f}}
 * Greek: {{qualifier|formal}} {{t+|el|νήσος|f}}, {{t+|el|νησί|n}}
 *: Ancient: {{t|grc|νῆσος|f}}
 * Guaraní: {{t|gn|ypa'ũ}}
@@ -165,7 +167,9 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Livonian: {{t|liv|sǭr}}
 * Livvi: {{t|olo|suari}}
 * Lojban: {{t|jbo|daplu}}
+* Lombard: {{t|lmo|isula|f}}
 * Low German: {{t|nds|Insel|f}}, {{t|nds|Ailand|n}}
+*: Dutch Low Saxon: {{t+|nds-nl|eilaand|n}}
 * Ludian: {{t|lud|suar'}}
 * Luganda: {{t|lg|ekizinga}}
 * Luxembourgish: {{t|lb|Insel|f}}
@@ -234,6 +238,7 @@ From earlier {{m|en|iland}}, from {{etyl|enm|en}} {{m|enm|iland}}, {{m|enm|yland
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|о̏стрво|n|sc=Cyrl}}, {{t|sh|о̀ток|m}}
 *: Roman: {{t+|sh|ȍstrvo|n}}, {{t+|sh|òtok|m}}
+* Shona: {{t|sn|chitsuwa}}
 * Sicilian: {{t+|scn|ìsula|f}}
 * Sindhi: {{t|sd|ٻيٽ|m|tr=bbetu|alt=ٻيٽُ|sc=sd-Arab}}
 * Sinhalese: {{t|si|දිවයින|sc=Sinh}}
