--- a/en/w/Wembley.803277.wikitext
+++ b/en/w/Wembley.803277.wikitext
@@ -9,8 +9,7 @@
 # A stadium in [[London]], the national sports stadium and venue where finals of major [[football]] tournaments are held.
 #: ''If they carry on with their good form, they'll be at '''Wembley''' at the end of the season.''
 #* {{quote-news
-|year=2011
-|date=April 11
+|date=April 11, 2011
 |author=Phil McNulty
 |title=Liverpool 3 - 0 Man City
 |work=BBC Sport
