--- a/en/u/ungratefulness.742233.wikitext
+++ b/en/u/ungratefulness.742233.wikitext
@@ -5,7 +5,7 @@
 
 ===Noun===
 {{en-noun|-}}
-# The state of being [[ungrateful]].
+# The state or act of being [[ungrateful]].
 
 ====Translations====
 {{trans-see|the state of being ungrateful|ingratitude}}
