--- a/en/s/sederunt.720251.wikitext
+++ b/en/s/sederunt.720251.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|la|en}} {{m|la|sederunt||there were sitting}}.
+From {{etyl|la|en}} {{m|la|sederunt||they were sitting}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/sɪˈdɪəɹənt/|lang=en}}
