--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -64,6 +64,8 @@ From {{etyl|ang|en}} [[gamenian]] 'to play', either via a dialectal survival of 
 
 ====Translations====
 {{trans-top|to take a risk, with the potential of a positive outcome}}
+* Arabic: {{t|ar|قِمَار|m|f}}
+*: Hijazi Arabic: {{t|acw|قُمار|m|tr=gumār|sc=Arab}}
 * Bulgarian: {{t+|bg|рискувам|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t|cmn|賭博|sc=Hani}}, {{t+|cmn|赌博|tr=dǔbó|sc=Hani}}, {{t|cmn|賭錢|sc=Hani}}, {{t+|cmn|赌钱|tr=dǔqián|sc=Hani}}
