--- a/en/b/began.6789.wikitext
+++ b/en/b/began.6789.wikitext
@@ -10,6 +10,7 @@
 {{head|en|verb form}}
 
 # {{en-simple past of|begin}}
+# {{lb|en|obsolete}} {{en-past of|begin}}
 
 ====Derived terms====
 * [[beganst]]
