--- a/en/n/nove.26046.wikitext
+++ b/en/n/nove.26046.wikitext
@@ -94,6 +94,7 @@ From {{inh|it|la|novem}}, ultimately from {{inh|it|ine-pro|*h₁néwn̥}}.
 |lang=it}}
 
 ===See also===
+{{table:playing cards/it}}
 * [[Appendix:Italian numbers]]
 
 ----
