--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -73,7 +73,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 *: Regional German: {{t|de|Eichkatze|f}}, {{t|de|Eichkätzchen|n}}, {{t|de|Eichkater|m}}, {{t+|de|Eichhase|m}}
 * Greek: {{t+|el|σκίουρος|m}}
 * Guaraní: {{t|gn|koati}}
-* Gujarati: {{t|gu|ખિસકોલી|tr=khiskholī|sc=Gujr}}
+* Gujarati: {{t|gu|ખિસકોલી|f|tr=khiskholī|sc=Gujr}}
 * Hebrew: {{t+|he|סנאי|m|tr=sna'í}}
 * Hindi: {{t|hi|गिलहरी|f|tr=gilahrī|sc=Deva}}
 * Hopi: {{t|hop|sakuna}}
