--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -79,6 +79,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Hopi: {{t|hop|sakuna}}
 * Hungarian: {{t+|hu|mókus}}
 * Icelandic: {{t+|is|íkorni|m}}
+* Ido: {{t+|io|skurelo}}
 * Indonesian: {{t+|id|bajing}}
 * Interlingua: {{t|ia|sciuro}}, {{t|ia|scuriolo}}
 * Irish: {{t|ga|iora|m}}, {{t|ga|madra crainn|m}}
