--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -26,6 +26,7 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 * [[otterlike]]
 {{rel-mid}}
 * [[ottery]]
+* [[river otter]]
 * [[sea otter]]
 {{rel-bottom}}
 
