--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -27,7 +27,7 @@ From {{etyl|ang|en}} {{m|ang|oter}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*utraz
 * [[otterlike]]
 {{rel-mid}}
 * [[ottery]]
-* {vern|river otter}}
+* {{vern|river otter}}
 * [[sea otter]]
 {{rel-bottom}}
 
