--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -51,8 +51,10 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from 
 * See also [[Wikisaurus:stick]]
 
 ====Derived terms====
+* {{l|en|centurion's staff}}
 * {{l|en|general staff}}
 * {{l|en|staff sling}}
+* {{l|en|vine staff}}
 
 ====Related terms====
 * [[member of staff]]
