--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -121,7 +121,8 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Marathi: {{t|mr|खार|sc=Deva}}
 * Nahuatl: {{t+|nah|mōtohtli}}
 * Narragansett: {{t|xnt|mishánneke}}
-* Navajo: {{t|nv|tseekʼi nástánii}}
+* Navajo: {{t|nv|tseekʼi nástánii}}, {{t|nv|hazéí}}
+* Newari: {{t|new|थ्वाच्चा|tr=thvāccā}}
 * Nivkh: {{t|niv|лаӄр̌|tr=laqrš|sc=Cyrl}}
 * Norman: {{qualifier|Jersey}} {{t|nrf|êtchutheu|m}}, {{qualifier|continental Norman}} {{t|nrf|jaqùet|m}}
 * Northern Sotho: {{t|nso|sehlora}}
