--- a/en/p/PTO.26209.wikitext
+++ b/en/p/PTO.26209.wikitext
@@ -3,13 +3,27 @@
 ===Pronunciation===
 * {{audio|en-us-PTO.ogg|Audio (US)|lang=en}}
 
+===Noun===
+{{en-noun}}
+
+# {{initialism of|lang=en|parent-teacher organization]]}}
+
+====Synonyms====
+* {{sense|parent-teacher organization}} {{l|en|PTA|gloss=parent-teacher association}}
+
+====Translations====
+{{trans-top|Parent Teacher Organization}}
+* German: {{t|de|Elternvertretung|f}}, {{t|de|Elternbeirat|m}}, {{t|de|Elternausschuss|m}}, {{t|de|Elternpflegschaft|f}}
+{{trans-mid}}
+* Japanese: {{t|ja|PTA}}
+{{trans-bottom}}
+
 ===Initialism===
 {{rfc-header|Initialism}}
 {{head|en|initialism}}
 
 # United States Patent and Trademark Office, usually abbreviated [[USPTO]].
 # Please turn over (written at the end of the text on a page to say that it continues overleaf)
-# Parent teacher organization
 # Paid time off
 # [[power take-off]], a powered shaft for driving auxiliary equipment.
 
@@ -31,14 +45,6 @@
 * German: {{t|de|Zapfwelle|f}}
 {{trans-mid}}
 {{trans-bottom}}
-
-{{trans-top|Parent Teacher Organization}}
-* German: {{t|de|Elternvertretung|f}}, {{t|de|Elternbeirat|m}}, {{t|de|Elternausschuss|m}}, {{t|de|Elternpflegschaft|f}}
-{{trans-mid}}
-{{trans-bottom}}
-
-====See also====
-* {{l|en|PTA}}
 
 ===Anagrams===
 * {{l|en|opt}}, {{l|en|OTP}}, {{l|en|pot}}, {{l|en|top}}, {{l|en|TPO}}
