--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -31,6 +31,7 @@
 * Albanian: {{t+|sq|bambu}}
 * Arabic: {{t|ar|خَيْزَرَان|m}}, {{t|ar|خَيْزُرَان|m}}
 *: Egyptian Arabic: {{t|arz|خيزران|m|tr=xayzaran|sc=Arab}}, {{t|arz|بامبو|m|tr=bambu|sc=Arab}}
+* Armenian: {{t+|hy|բամբուկ|sc=Armn}}
 * Asturian: {{t|ast|bambú|m}}
 * Azeri: {{t+|az|bambuk}}
 * Banjarese: {{t|bjn|buluh}}, {{t|bjn|paring}}
@@ -67,8 +68,8 @@
 * Kannada: {{t+|kn|ಬಿದಿರು|sc=Knda}}
 * Kazakh: {{t|kk|бамбук|sc=Cyrl}}
 * Khmer: {{t+|km|ឫស្សី|tr=rɨhsəy|sc=Khmr}}
-* Korean: {{t+|ko|대나무|sc=Kore}}
 {{trans-mid}}
+* Korean: {{t+|ko|대나무|sc=Kore}}
 * Kyrgyz: {{t+|ky|бамбук|m|sc=Cyrl}}
 * Lao: {{t|lo|ໄມ້ໄຜ່|sc=Laoo}}
 * Latin: {{t|la|harundō Indica|f}}
