--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -68,8 +68,8 @@
 * Kannada: {{t+|kn|ಬಿದಿರು|sc=Knda}}
 * Kazakh: {{t|kk|бамбук|sc=Cyrl}}
 * Khmer: {{t+|km|ឫស្សី|tr=rɨhsəy|sc=Khmr}}
-{{trans-mid}}
 * Korean: {{t+|ko|대나무|sc=Kore}}
+{{trans-mid}}
 * Kyrgyz: {{t+|ky|бамбук|m|sc=Cyrl}}
 * Lao: {{t|lo|ໄມ້ໄຜ່|sc=Laoo}}
 * Latin: {{t|la|harundō Indica|f}}
@@ -106,6 +106,7 @@
 * Thai: {{t+|th|ไผ่|sc=Thai}}
 * Tok Pisin: {{t|tpi|mambu}}
 * Turkish: {{t+|tr|bambu}}
+* Turkmen: {{t+|tk|bambuk}}
 * Ukrainian: {{t+|uk|бамбу́к|m|sc=Cyrl}}
 * Urdu: {{t|ur|بانس|tr=bāns|sc=ur-Arab}}
 * Uzbek: {{t+|uz|bambuk}}
