--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -16,7 +16,7 @@ From {{etyl|enm|en}} {{m|enm|staf}}, from {{etyl|ang|en}} {{m|ang|stæf}}, from 
 {{en-noun|~|s|staves|staff}}
 [[Image:Music-staff.png|thumb|right|A musical staff]]
 
-# {{lb|en|plural [[staffs]] or [[staves]]}} A [[long]], [[straight]] [[stick]], especially one used to assist in walking.
+# {{lb|en|plural [[staffs]] or [[staves]]}} A long, straight, thick wooden [[rod]] or [[stick]], especially one used to assist in walking.
 #* {{quote-book|year=1927|author=[http://openlibrary.org/authors/OL2416183A F. E. Penny]
 |chapter=4|title=[http://openlibrary.org/works/OL16814587W Pulling the Strings]
 |passage=The case was that of a murder. It had an element of mystery about it, however, which was puzzling the authorities. A turban and loincloth soaked in blood had been found; also a '''staff'''.}}
