--- a/en/m/moneylender.720245.wikitext
+++ b/en/m/moneylender.720245.wikitext
@@ -16,8 +16,9 @@
 * Finnish: {{t+|fi|rahanlainaaja}}
 * Georgian: {{t|ka|მევახშე}}
 * Greek: {{t+|el|τοκιστής|m}}
-{{trans-mid}}
 * Portuguese: {{t|pt|agiota|m|f}}
+{{trans-mid}}
+* Romanian: {{t+|ro|cămătar|m}}, {{t+|ro|uzurar|m}}, {{t|ro|uzurară|f}}
 * Russian: {{t+|ru|ростовщи́к|m}}
 * Spanish: {{t|es|prestamista|m|f}}
 {{trans-bottom}}
