--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -42,6 +42,7 @@ Abbreviation of various terms and phrases.
 
 ===Pronunciation===
 * {{IPA|/ˌsiːˈdiː/|lang=en}}
+* {{rhymes|iːdi|lang=en}}
 
 ===Noun===
 {{en-noun|~}}
