--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -21,6 +21,7 @@ From 16th century {{m|en|cole-florye}}. Compare Latin {{m|la|caulis}}, French {{
 * {{l|en|broccoflower}}
 * {{l|en|cauliflower cheese}}
 * {{l|en|cauliflower ear}}
+* {{l|el|cauli}}
 
 ====Translations====
 {{trans-top|Vegetable}}
