--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -84,6 +84,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare Middle Dutch {{m|d
 * Albanian: {{t|sq|fllucka|f}}, {{t+|sq|flluskë|f}}
 * Amharic: {{t|am|አረፋ|sc=Ethi}}
 * Arabic: {{t|ar|فُقَّاعَة|f}}
+*: Hijazi Arabic: {{t|acw|فُقَّاعَة|f|tr=fuggāʿa}}
 * Aragonese: {{t|an|bambolla|f}}
 * Armenian: {{t+|hy|պղպջակ}}
 * Assamese: {{t-needed|as}}
