--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -42,7 +42,7 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 * Esperanto: {{t|eo|maksimumo}}
 * Finnish: {{t+|fi|maksimi}}
 * French: {{t+|fr|maximum|m}}
-* German: {{t+|de|Maximum|n}}
+* German: {{t+|de|Maximum|n}}, {{t|de|höchstmöglich}}
 * Greek: {{t|el|ανώτατο όριο|n}}, {{t+|el|άκρον άωτον|n}}
 * Hebrew: {{t|he|מַכְּסִימוּם|m|tr=maximum}}, {{t+|he|מֵרַב|m|tr=mēráv}}
 * Ido: {{t+|io|maximo}}
