--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -84,6 +84,8 @@ From {{etyl|fr|en}} {{m|fr|ajustement}}, or else {{suffix|adjust|ment|lang=en}}.
 {{trans-top|settling or balancing of a financial account}}
 * Finnish: {{t|fi|korjaus}}
 {{trans-mid}}
+* Norwegian:
+*: Bokmål: {{t|nb|korrigering|m|f}}
 {{trans-bottom}}
 
 {{trans-top|process of balancing conflicting needs}}
