--- a/en/m/milkweed.720309.wikitext
+++ b/en/m/milkweed.720309.wikitext
@@ -19,6 +19,7 @@
 ====Translations====
 {{trans-top|a plant}}
 {{trans-mid}}
+* Maori: {{t|mi|kaikaiatua }}
 {{trans-bottom}}
 
 ===External links===
