--- a/en/n/NRFB.746558.wikitext
+++ b/en/n/NRFB.746558.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
-===Initialism===
-'''NRFB'''
+===Adjective===
+{{en-adj|-}}
 
-# Never removed from box.
+# {{abbreviation of|[[never]] [[removed]] [[from]] [[box]]|lang=en}}
 
 ====Usage notes====
 In catalogs and online stores, this is used in the [[context]] of [[collectibles]]; collectibles never removed from their box retain more value.
