--- a/en/c/cult of personality.856173.wikitext
+++ b/en/c/cult of personality.856173.wikitext
@@ -17,7 +17,7 @@
 * Chinese:
 *: Mandarin: {{t+|cmn|個人崇拜|sc=Hani}}, {{t+|cmn|个人崇拜|tr=gèrén chóngbài|sc=Hani}}
 * Estonian: {{t|et|isikukultus}}
-* Finnish: {{t+|fi|henkilökultti}}
+* Finnish: {{t+|fi|henkilökultti}}, {{t|fi|henkilöpalvonta}}
 * French: {{t+|fr|culte de la personnalité|m}}
 * Georgian: {{t-needed|ka}}
 * German: {{t+|de|Personenkult|m}}
