--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -807,7 +807,7 @@ From {{der|tk|otk|𐱃|tr=at}}, from {{inh|tk|trk-pro|*at}}, {{m|trk-pro|*ăt||h
 {{tk-decl-noun-man|at|atlar|ady|atlary|adyň|atlaryň|ada|atlara|atda|atlarda|atdan|atlardan}}
 
 ===Etymology 2===
-From {{der|tk|otk|𐰀𐱃|tr=āt||name}} (sometimes spelled without the vowel, {{m|otk|𐱃}}), from {{inh|tk|trk-pro|*āt}} (compare {{cog|cv|ят||name}}).
+From {{der|tk|otk|𐰀𐱃|tr=āt||name}} (sometimes spelled without the vowel as {{m|otk|𐱃}}), from {{inh|tk|trk-pro|*āt}} (compare {{cog|cv|ят||name}}).
 
 ====Pronunciation====
 * {{IPA|/aːt/|lang=tk}}
