--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -145,7 +145,6 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Japanese: {{t+|ja|物|tr=もの, mono|sc=Jpan}}
 * Kazakh: {{t|kk|нәрсе|sc=Cyrl}}
 * Khmer: {{t+|km|របស់|tr=rɔbɑh|sc=Khmr}}, {{t+|km|វត្ថុ|tr=voattʰo’|sc=Khmr}}
-* Kinyarwanda: {{t|rw|ikintu|c7|c8}}
 * Korean: {{t+|ko|물건|sc=Kore}}
 * Kyrgyz: {{t+|ky|нерсе|sc=Cyrl}}
 {{trans-mid}}
@@ -171,6 +170,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Portuguese: {{t+|pt|coisa|f}}
 * Romanian: {{t+|ro|lucru|n}}, {{t+|ro|chestie|f}}, {{t+|ro|obiect|n}}
 * Russian: {{t+|ru|вещь|f}}, {{t+|ru|не́что|n}}, {{t+|ru|предме́т|m}}
+* Rwanda-Rundi: {{t|rw|ikintu|c7|c8}}
 * Sanskrit: {{t+|sa|वस्तु|m}}
 * Scottish Gaelic: {{t|gd|rud|m}}
 * Serbo-Croatian:
