--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -40,6 +40,7 @@ From {{etyl|fro|en}} {{m|fro|division}}, from {{etyl|la|en}} {{m|la|divisio}}, n
 * {{l|en|procedure division}}
 * {{sense|military}} {{l|en|square division}}
 * {{sense|military}} {{l|en|triangular division}}
+* {{l|en|subdivision}}
 
 ====Related terms====
 * {{l|en|divide}}
