--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -51,7 +51,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Catalan: {{t+|ca|esquirol|m}}
 * Central Mazahua: {{t|maz|mijñi}}
 * Chechen: {{t|ce|тарсал}}
-* Cherokee: {{t|chr|ᏌᎳᎵ|tr=salali|sc=Cher}}
+* Cherokee: {{t|chr|ᏌᎳᎵ|tr=salali|sc=Cher}}, {{t|chr|ᏌᎶᎵ|sc=Cher}}
 * Cheyenne: {{t|chy|no'ee'e}}
 * Chinese:
 *: Cantonese: {{t|yue|松鼠|tr=cung4 syu2|sc=Hani}}
