--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -16,7 +16,7 @@ Cognate with Scots {{m|sco|wecht}}, {{m|sco|weicht||weight}}, Saterland Frisian 
 ===Noun===
 {{wikipedia}}
 [[File:Poids fonte 1 kg 02.jpg|thumb|Weight (3) for balance.]]
-{{en-noun}}
+{{en-noun|~}}
 
 # The [[force]] on an object due to the gravitational attraction between it and the Earth (or whatever astronomical object it is primarily influenced by).
 # An object used to make something [[heavier]].
