--- a/en/g/go public.742281.wikitext
+++ b/en/g/go public.742281.wikitext
@@ -1,12 +1,10 @@
 ==English==
 
 ===Verb===
-'''[[go]] [[public]]'''
+{{head|en|verb}}
 
 # {{lb|en|idiomatic|intransitive}} Make [[public]], announce [[publicly]] or to the [[press]].
 # {{lb|en|idiomatic|intransitive}} To launch an [[initial public offering]].
-
-[[Category:English verbs]]
 
 [[et:go public]]
 [[kn:go public]]
