--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -1,6 +1,8 @@
 ==English==
 [[Image:Balkan_Peninsula.svg|thumb|250px|Balkan peninsula (as defined by the Danube-Sava-Kupa line)]]
-===[[p|EtymEtymEtymologyologyEtymologyology]]===
+{{wikipedia}}
+
+===Etymology===
 Of {{etyl|trk|en}} origin. Compare Turkish {{m|tr|balkan||wooded mountain range}}.
 
 ===Pronunciation===
